--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 
 <body>
     <script>
-        let a = 1;
-        let b = 2;
-        console.log(a + b);
+
+        console.log("这是master分支");
     </script>
 </body>
 
