--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
 <body>
     <script>
-        let a = 1;
-        let b = 2;
-        console.log(a + b);
+
+
+
+console.log("这是dev分支");
+        
     </script>
 </body>
 
