--- a/index.html
+++ b/index.html
@@ -9,12 +9,9 @@
 
   <body>
     <script>
-      console.log("这是dev分支");
-      console.log("军节度使");
-      console.log("军节度使");
-      console.log("军节度使");
-      console.log("jdfbjdsbjfdbjdsbjbjfdsb");
-      console.log("军节度使");
+      let obj = {
+        name: "好好学习，天天向上",
+      };
     </script>
   </body>
 </html>
