--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <script>
       let a = 1;
       let b = 2;
-      console.log(a + b);
-      console.log("这test");
+      console.log("我是test1");
     </script>
   </body>
 </html>
