--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       let a = 1;
       let b = 2;
       console.log("我是test1");
+      console.log("我是test1");
+      console.log("我是test1");
+      console.log("我是test1");
+      console.log("我是test1");
     </script>
   </body>
 </html>
